<resources>
    <string name="app_name">ToIfe</string>
    <string name="new_user"><u>New User? Sign UP.</u></string>
    <string name="tilak_kamod">Tilak Kamod</string>
    <string name="user_name"><b>User Name</b></string>
    <string name="email_id"><b>Email ID</b></string>
    <string name="od_pass"><b>Old Password</b></string>
    <string name="nw_pass"><b>New Password</b></string>
    <string name="cf_pass"><b>Confirm Password</b></string>
    <string name="bio"><b>Bio</b></string>
    <string name="fhg">When you want to feel happy and energetic
    </string>
    <string name="combine_ora">
        Combine orange and yellow in your wardrobe. Not only will you feel more sunny, but you\u00E2\u0080\u0099ll project that image onto others, potentially helping to lift their mood.
    </string>
    <string name="when_you_ne">
        When you need to be calm
    </string>
    <string name="a_combinati">
        A combination of pastel green and blue colors work well in rooms where you want to relax after a stressful day at work, or somewhere within eyesight when you have to confront a stressful situation.
    </string>
    <string name="to_keep_you">
        To keep your spirits up
    </string>
    <string name="if_life_has">
        If life has been difficult lately, it may be time to bring in more yellow to your living and working spaces. Yellow is associated with optimism and good times.
    </string>
    <string name="when_you_re">
        When You\'re Tired and Just Don\'t Feel Like Doing Anything
    </string>
    <string name="get_some_re">
        Get some red on! This color creates energy and helps infuse your spirit with vitality. Rely on it to get you through a tough day.
    </string>
    <string name="when_you_wa">When you want some space to relax</string>
    <string name="get_some_gr">Get some green into the mix. Because of its connection to nature and the environment, it\u00E2\u0080\u0099s typically associated with relaxation and comfort.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book1">Becoming is the memoir of former First Lady of the United States Michelle Obama, published in 2018. Described by the author as a deeply personal experience, the book talks about her roots and how she found her voice, as well as her time in the White House, her public health campaign, and her role as a mother. </string>
    <string name="this_is_a_m">
    This is a memoir about a man who turned his life around after drug addition. Educational Themes: From the "ugly truths" of addition to believing in oneself, there is a lot to take away and discuss in Teaches how people in the worst situations can really turn their life around in The Fifth Vital.
    </string>
    <string name="a_redemptio">
    A redemption tale like no other: Behind the Mask is an unflinching autobiography from the British People\'s Champion that details - for the first time ever - the extraordinary story of the rise and fall and rise again of Tyson Fury
    </string>
    <string name="the_subtle_">
        The Subtle Art of Not Giving a Fuck: A Counterintuitive Approach to Living a Good Life is the second book by blogger and author Mark Manson. In it Manson argues that life\'s struggles give it meaning, and that the mindless positivity of typical self-help books is neither practical nor helpful
    </string>
    <string name="first_time_">
    First-time author and mental health advocate Shaheen Bhatt\u00E2\u0080\u0099s memoir is a very quick read. She effortlessly juxtaposes the puzzle of being born privileged and growing up with depression. This startlingly perspicacious book talks about the unpredictability of mental health in the most matter-of-fact way. Anyone who wants a moving personal account and an honest perspective on mental health can start with this gem.
    </string>
    <string name="ever_wonder">
        Ever wondered what your therapist is thinking during your appointments? If the answer is yes, go buy this book ASAP. Lori Gottlieb explores the world of therapy from a unique perspective\u00E2\u0080\u0094she writes about her role as both therapist and patient. You\u00E2\u0080\u0099ll find yourself gripped by the narratives she tells\u00E2\u0080\u0094some tragic, some hilarious\u00E2\u0080\u0094and in awe of the book\u00E2\u0080\u0099s astounding conclusion: We\u00E2\u0080\u0099re all human and flawed.
    </string>
    <string name="journalist_">
        Journalist Jenny Lawson\u00E2\u0080\u0099s memoir about her lifelong journey with depression and other mental health problems is equal parts funny and endearing. Furiously Happy explores the nuanced, often contradictory world of mental health, with a look at how people can thrive and find happiness in spite of mood disorders like depression.
    </string>
    <string name="the_quick_r">
        The quick read features the stories of 33 people who have dealt with mental illness in some form, with their commentary on why we don\u00E2\u0080\u0099t talk about it enough\u00E2\u0080\u0094and why that needs to change.
    </string>
    <string name="are_you_lik">
        Are you, like millions of Americans, caught in the happiness trap? Russ Harris explains that the way most of us go about trying to find happiness ends up making us miserable, driving the epidemics of stress, anxiety, and depression.
    </string>
    <string name="this_canoni">
        This canonical book explores bipolar disorder\u00E2\u0080\u0094a condition characterized by extreme mood swings\u00E2\u0080\u0094from the lens of someone who\u00E2\u0080\u0099s not only a clinical psychologist and expert on the topic, but also suffers from the disorder herself. Kay Redfield Jamison\u00E2\u0080\u0099s unique perspective on bipolar disorder as both the patient and the practitioner has made An Unquiet Mind one of the most well regarded pieces ever written on the topic
    </string>
    <string name="i_was_in_st">

    I was in std. IX when my dad was Transfered to Sambalpur. \u000D\n\u000D\nI had recently lost my best friend, one of the most trusted people of my life. I was in need of a support. Everything was new to me. And eventually, I made a huge blunder in choosing friends, probably the biggest mistake of my life. They misused my innocence and love what I had for them as persons and exposed me to addictions. Thankfully I wasn\'t taken into it. One of them became a very close friend of mine just to come close to and eventually  propose a girl who was my close friend. Again I was used. All of this distraction led my grades to detoriate. And all of a sudden I lost my maternal grandma, who was my very first inspiration. These heartbreaks and trust issues led me into Depression until a guy came to my rescue. He pushed me forward in every way he could. And helped me secure 92% in IX. But I didn\'t recover completely. I wasn\'t emotionally stable at all. Then another guy joined the school and unknowingly became very close. I was inspired by him. I saw a different perception of life. His personality was very like my grandma\'s. And without the knowledge of both me and himself, he made me emotionally strong and taught me self worth and confidence, which I lacked during that phase. These two guys played a huge role in my recovery and because of them I\'m alive. There were times when I thought of jumping off the terrace of our 8 storeyed building, cutting my veins,etc. But Everytime I was stopped by the visuals of my mom, my grandma, and them. The second guy insisted me to continue with my sports and music, which I had almost left during the phase ( I\'m a state level Badminton player and swimmer and I\'m classically trained in vocal and sitar). Yes indeed. Coming back into sports helped me a lot recovering. The key point to fight depression is to accept. Confidence automatically vanishes. But acceptance makes the task easier to get it back and right. -Neil Chakarborty
    </string>
</resources>