<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/up_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_profile"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/up_tolife"
            android:layout_width="159dp"
            android:layout_height="146dp"
            android:src="@drawable/tolife1"/>

        <TextView
            android:id="@+id/uname_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/capriola"
            android:text="@string/user_name"
            android:textAppearance="@style/user_name" />

        <EditText
            android:id="@+id/uname_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/email_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/capriola"
            android:text="@string/email_id"
            android:textAppearance="@style/user_name" />

        <EditText
            android:id="@+id/email_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/od_pass_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/capriola"
            android:text="@string/od_pass"
            android:textAppearance="@style/user_name" />

        <EditText
            android:id="@+id/od_pass_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/nw_pass_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/nw_pass"
            android:fontFamily="@font/capriola"
            android:textAppearance="@style/user_name" />

        <EditText
            android:id="@+id/nw_pass_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/cf_pass_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/cf_pass"
            android:fontFamily="@font/capriola"
            android:textAppearance="@style/user_name" />

        <EditText
            android:id="@+id/cf_pass_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/bio_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/bio"
            android:fontFamily="@font/capriola"
            android:textAppearance="@style/user_name" />

        <EditText
            android:id="@+id/bio_up_edittext"
            android:layout_width="259dp"
            android:layout_height="195dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:elevation="16dp" />



        <Button
            android:id="@+id/save_button"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/capriola"
            android:text="Edit Changes"
            android:background="@drawable/rectangle"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>