<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Selfcare_colortherapy"
android:background="@drawable/background">

<LinearLayout
    android:id="@+id/up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/music_tolife"
            android:layout_width="159dp"
            android:layout_height="146dp"
            android:src="@drawable/tolife1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.014"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.011" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Practice"
            android:textColor="#996665"
            android:textSize="24sp"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="178dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="80dp"
            android:text="Color Therapy"
            android:textColor="#5E454B"
            android:textSize="28sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <View
            android:id="@+id/rectangle_ct_1"
            android:layout_width="312dp"
            android:layout_height="192dp"
            android:background="@drawable/rectangle"
            android:foregroundGravity="center"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="108dp"></View>

        <ImageView
            android:id="@+id/ena_tolife"
            android:layout_width="121dp"
            android:layout_height="114dp"
            android:layout_marginLeft="181dp"
            android:layout_marginTop="62dp"
            android:src="@drawable/relax_ct"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="54dp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="57dp"
            android:text="@string/when_you_wa"
            android:textAppearance="@style/sc_ct"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="9dp"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="130dp" />

        <TextView
            android:layout_width="184dp"
            android:layout_height="108dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="83dp"
            android:text="@string/get_some_gr"
            android:textAppearance="@style/sc_ct_2"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="181dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <View
            android:id="@+id/rectangle_ct_2"
            android:layout_width="312dp"
            android:layout_height="192dp"
            android:background="@drawable/rectangle"
            android:foregroundGravity="center"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="108dp"></View>

        <ImageView
            android:id="@+id/ltm_tolife"
            android:layout_width="121dp"
            android:layout_height="134dp"
            android:layout_marginLeft="181dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/energetic_ct"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="54dp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="57dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="15dp"
            android:text="@string/fhg"
            android:textAppearance="@style/sc_ct"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="130dp" />

        <TextView
            android:layout_width="184dp"
            android:layout_height="108dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="73dp"
            android:text="@string/combine_ora"
            android:textAppearance="@style/sc_ct_2"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="181dp" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <View
            android:id="@+id/rectangle_ct_3"
            android:layout_width="312dp"
            android:layout_height="192dp"
            android:background="@drawable/rectangle"
            android:foregroundGravity="center"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="108dp"></View>

        <ImageView
            android:id="@+id/rb_tolife"
            android:layout_width="96dp"
            android:layout_height="100dp"
            android:layout_marginLeft="206dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/calm_ct"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="54dp" />

        <TextView
            android:layout_width="184dp"
            android:layout_height="108dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="55dp"
            android:text="@string/a_combinati"
            android:textAppearance="@style/sc_ct_2"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="130dp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="57dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="15dp"
            android:text="@string/when_you_ne"
            android:textAppearance="@style/sc_ct"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="181dp" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <View
            android:id="@+id/rectangle_ct_4"
            android:layout_width="312dp"
            android:layout_height="192dp"
            android:background="@drawable/rectangle"
            android:foregroundGravity="center"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="108dp"></View>

        <ImageView
            android:id="@+id/pct_tolife"
            android:layout_width="112dp"
            android:layout_height="144dp"
            android:layout_marginLeft="193dp"
            android:layout_marginTop="27dp"
            android:src="@drawable/spirit_ct"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="54dp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="57dp"
            android:text="@string/to_keep_you"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="9dp"
            android:textAppearance="@style/sc_ct"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="130dp" />

        <TextView
            android:layout_width="184dp"
            android:layout_height="108dp"
            android:text="@string/if_life_has"
            android:layout_marginTop="62dp"
            android:layout_marginLeft="9dp"
            android:textAppearance="@style/sc_ct_2"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="181dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <View
            android:id="@+id/rectangle_ct_5"
            android:layout_width="312dp"
            android:layout_height="192dp"
            android:background="@drawable/rectangle"
            android:foregroundGravity="center"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="108dp"></View>

        <ImageView
            android:id="@+id/wyt_tolife"
            android:layout_width="147dp"
            android:layout_height="138dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="29dp"
            android:src="@drawable/tired_ct"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="54dp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="57dp"
            android:text="@string/when_you_re"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="9dp"
            android:textAppearance="@style/sc_ct"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="130dp" />

        <TextView
            android:layout_width="184dp"
            android:layout_height="108dp"
            android:text="@string/get_some_re"
            android:layout_marginTop="83dp"
            android:layout_marginLeft="9dp"
            android:textAppearance="@style/sc_ct_2"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="181dp" />

    </RelativeLayout>
</LinearLayout>
</ScrollView>